style: update About and Shop section styles for improved layout and responsiveness - enabled overflow hidden in About section for better content management - changed background image and position in Shop section for enhanced visual appeal on mobile - refined media query for Shop section to ensure proper background display on larger screens

--- a/src/styles/scss/_about.scss
+++ b/src/styles/scss/_about.scss
@@ -2,7 +2,7 @@
 
 .about { 
   position: relative;
-  // overflow: hidden;
+  overflow: hidden;
   padding-bottom: 15vh;
   z-index: 9;
 
